# satellite

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.tsx  theme.css  theme.tsx
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json  tauri.dev.json
src-tauri/capabilities/: default.json
src-tauri/icons/: ico.icns
src-tauri/src/: commands.rs  config.rs  downloader.rs  errors.rs  launcher.rs  lib.rs  main.rs  minecraft_api.rs  mods.rs
src/components/: ConfigModal.tsx  ConfigPage.tsx  ListVersions.tsx  ModsPage.tsx  Sidebar.tsx  TitleBar.tsx
src/constants/: index.ts
src/hooks/: useLauncher.ts
src/icons/: Folder.tsx  Settings.tsx
src/types/: mods.ts
src/utils/: types.ts
