[package]
name = "satellite"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "satellite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "rustls-tls"] }
futures = "0.3"
glob = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.6"
